--- a/src/com/jonas/test.form
+++ b/src/com/jonas/test.form
@@ -14,6 +14,7 @@
         </constraints>
         <properties>
           <text value="Caesar"/>
+          <toolTipText value="Click here for a Caesar cypher"/>
         </properties>
       </component>
       <component id="5ecbe" class="javax.swing.JButton" binding="vernamButton" default-binding="true">
@@ -22,6 +23,7 @@
         </constraints>
         <properties>
           <text value="Vernam"/>
+          <toolTipText value="Click here for a Vernam cypher"/>
         </properties>
       </component>
       <component id="e6717" class="javax.swing.JButton" binding="vignereButton" default-binding="true">
@@ -30,6 +32,7 @@
         </constraints>
         <properties>
           <text value="Vignere"/>
+          <toolTipText value="Click here for a Vignere cypher"/>
         </properties>
       </component>
       <component id="c6b4d" class="javax.swing.JTextField" binding="textField1" default-binding="true">
@@ -38,7 +41,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <toolTipText value="Enter the message you want to encrypt"/>
+        </properties>
       </component>
       <component id="427f5" class="javax.swing.JTextField" binding="textField2" default-binding="true">
         <constraints>
@@ -46,14 +51,16 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <toolTipText value="Enter the key/file name"/>
+        </properties>
       </component>
       <component id="2f0b3" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Text"/>
+          <text value="Message"/>
         </properties>
       </component>
       <component id="5850c" class="javax.swing.JLabel">
@@ -61,23 +68,15 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Key"/>
+          <text value="Key / file name"/>
         </properties>
-      </component>
-      <component id="19444" class="javax.swing.JTextField" binding="textField3" default-binding="true">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
       </component>
       <component id="51466" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Output"/>
+          <text value="Output / save name"/>
         </properties>
       </component>
       <component id="83120" class="javax.swing.JButton" binding="pictureButton" default-binding="true">
@@ -86,6 +85,18 @@
         </constraints>
         <properties>
           <text value="Picture"/>
+          <toolTipText value="Click here for your message to be hidden in a picture"/>
+        </properties>
+      </component>
+      <component id="19444" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+          <toolTipText value="This is where the encrypted message will be or enter the save name"/>
         </properties>
       </component>
     </children>
